[project]
name = "hackerrankchatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]==0.115.6",
    "llama-index==0.12.6",
    "llama-index-llms-openai==0.3.11",
    "pytest==8.3.4",
    "streamlit==1.41.1",
]
